@@ -1,8 +1,16 @@
+Thu Jun  9 22:06:02 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * tools/scripts/dds_fuzz.pl:
+
+          New script that runs fuzz.pl (from ACE) passing in the list of tests
+          that are applicable to OpenDDS.  Try running with -m to check only
+          svn added or modified files.
+
 Thu Jun  9 19:34:29 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.model/model/Topics.ecore_diagram:
 
-	  Update to include DomainEntity and class attributes.
+          Update to include DomainEntity and class attributes.
 
 Thu Jun  9 19:25:27 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
